formation-kubernetes-user/Exercices/workspaces/Lab4/pod--dnsutils--4.8.yml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: du
  name: dnsutils
spec:
  containers:
  - image: tutum/dnsutils
    name: dnsutils
    command:
      - "bash"
      - "-c"
      - "sleep infinity"
