formation-kubernetes-user/Exercices/workspaces/Lab4/ingress--trafik-ui--4.6.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik-ui.FIXME.xip.io
    http:
      paths:
      - backend:
          serviceName: traefik-web-ui
          servicePort: 80
